show scrollbar only if needed. Fixes #280

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -471,7 +471,7 @@ div.node, div.legend {
 
 div.node{
   &.syn{
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
